Replace calls to deprecated Class#newInstance method
Part of #435 and Bugzilla Id: 62972


git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1847981 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 140b87f9f86aed477c82cd5d99ba984eb40a5ed0